# dashboard

./: .env.backend.example  .env.db.example  .env.example  .env.ingester.example  .env.pending_aggregations.example  .env.proxy.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  PRIVACY.md  README.md  WIP_tree-details-e2e.md  docker-compose-next.yml  docker-compose.dev.yml  docker-compose.k6.yml  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml
backend/: .coveragerc  .dockerignore  .flake8  .gitignore  Dockerfile  README.md  conftest.py  generate-schema.sh  manage.py  migrate-app-db.sh  migrate-cache-db.sh  migrate_cache_db.sh  pre-commit  pre-push  pyproject.toml  ruff.toml  run_perf_tests.sh  schema.yml  setup-dashboard-db.sh  test.env  test.patch
backend/data/: cache.sqlite3  trees-name.yaml
backend/data/notifications/: example-hardware-subscription.yaml  example-subscription.yaml  old-recipients.yaml
backend/docs/: caveats.md  database-logic.md  issues.md  monitor_submissions.md  tree-names.md  update_db command.md
backend/kernelCI/: asgi.py  perf_test_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/kernelCI/envconfig/: schema-version.yaml
backend/kernelCI_app/: apps.py  cache.py  models.py  serializers.py  tasks.py  urls.py  utils.py  viewCommon.py  views.py
backend/kernelCI_app/constants/: general.py  hardwareDetails.py  ingester.py  localization.py  process_pending.py  tree_names.py
backend/kernelCI_app/helpers/: build.py  commonDetails.py  database.py  date.py  dateRange.py  detailsIssues.py  email.py  (+16 more)
backend/kernelCI_cache/: apps.py  checkouts.py  constants.py  models.py  utils.py
backend/kernelCI_ingester/: apps.py
backend/requests/: 7  boots-get.sh  build-details-get.sh  build-issues-get.sh  build-status-count-get.sh  build-tests-get.sh  grouped-tests.sh  hardware-details-boots-post.sh  hardware-details-builds-post.sh  hardware-details-commit-history-post.sh  hardware-details-post.sh  hardware-details-summary-post.sh  hardware-details-tests-post.sh  hardware-listing-fast.sh  hardware-listing-slow.sh  hardware-listing-v2.sh  hardware-listing.sh  hardware.sh  issue-details-builds-get.sh  issue-details-get.sh  issue-details-tests-get.sh  issue-extras-post.sh  issue-listing-get.sh  kci-summary-get.sh  log-downloader-error.sh  log-downloader.sh  origins-get.sh  revision-tests-get.sh  test-details-get.sh  test-issues-get.sh  test-status-history-get.sh  test-status-series-get.sh  tests-by-commit-hash.sh  tree-commit-history.sh  tree-details-boots-get.sh  tree-details-builds-get.sh  tree-details-get.sh  tree-details-summary-get.sh  tree-details-tests-get.sh  tree-latest-get.sh  (+3 more)
backend/scripts/: copy_db_data.sh  init-test-db.sql  look-for-issues.sh  send-summary-emails.sh
backend/utils/: development_metrics.py  prometheus_aggregator.py  validation.py
(+1004 files in other folders)
