[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Django Backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = 'kernelCI' }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.8"
djangorestframework = "^3.15.2"
gunicorn = "^22.0.0"
psycopg = "^3.1.19"
django-query-builder = "^3.2.0"
django-cors-headers = "^4.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
