[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Django Backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = 'kernelCI' }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.12"
djangorestframework = "^3.15.2"
gunicorn = "^23.0.0"
psycopg = "^3.1.19"
django-query-builder = "^3.2.0"
django-cors-headers = "^4.4.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.4"
pydantic = "^2.10.3"
drf-spectacular = "^0.28.0"
jinja2 = "^3.1.5"
django-crontab = "^0.7.1"
redis = {extras = ["hiredis"], version = "^5.2.1"}
kcidb_io = {git = "https://github.com/kernelci/kcidb-io.git"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
flake8 = "^7.1.0"
pytest = "^8.3.4"
pytest-django = "^4.10.0"
pep8-naming = "^0.14.1"
pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}
pytest-rerunfailures = "^15.0"
pytest-cov = "^6.2.1"
factory-boy = "^3.3.3"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "kernelCI.settings"
addopts = "-n 4 --dist loadscope --reruns 4 -x"
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "integration: marks tests as integration tests (slow, connects to the database)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
